--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@ h1{
 	color: white;
 	margin: 0;
 	padding: 1.5rem;
+	font-size: 3.5rem;
 }
 
 h2{
@@ -69,7 +70,7 @@ a{
 	color: white;
 }
 
-.linkConnect{
+.linkConnect, .userLogOut{
 	text-align: center;
 }
 
@@ -96,12 +97,6 @@ a{
 
 .link > a {
 	margin: 0.5rem;
-}
-
-.linkLogOut{
-	display: block;
-	text-align: center;
-	margin-top: 2rem;
 }
 
 .linkGallery{
